# desktop-app

./: .gitignore  .gitmodules  README.md  build-camelot.sh  build.sh  izpack.xml  pom.xml  remote-dbs-docker-compose.yml  trt-plugin-mkt-template.xml
app-launcher/: Cargo.toml
app-launcher/src/: main.rs
post-install-bin/: Cargo.toml
post-install-bin/src/: error.rs  main.rs
post-install-bin/src/java_jdk/: mod.rs
post-install-bin/src/shortcut/: mod.rs
schemas/: help-entry-metadata.yaml  trt-help-entry-metadata.yaml
src/main/java/org/lebastudios/theroundtable/: HomePaneController.java  IProgresableTask.java  MainStageController.java  TheRoundTableApplication.java
src/main/java/org/lebastudios/theroundtable/accounts/: AccountCreatorController.java  AccountManager.java  AccountStageController.java  ChangePasswordStageController.java  LocalPasswordValidator.java  PrivilegeScalationStageController.java
src/main/java/org/lebastudios/theroundtable/camelot/: Client.java  (+3 more)
src/main/resources/: hibernate.cfg.xml
src/main/resources/help/: accounts.yaml  main-stage.yaml  main-stage_en.md  main-stage_es.md  main_stage_es.md  plugins.yaml  welcome.yaml
src/main/resources/help/accounts/: form.yaml  privileges.yaml  settings-pane.yaml
src/main/resources/help/plugins/: installation.yaml  ui.yaml  ui_es.md
src/main/resources/org/lebastudios/theroundtable/: homePane.fxml  lang_en.properties  lang_es.properties  languagesData.csv  mainStage.fxml
styles/cupertino-dark/: help.css  theme.css
styles/cupertino-light/: help.css  theme.css
styles/dracula/: theme.css
(+147 files in other folders)
